web-app/css/main.css
/* ... */
@media screen and (min-width:1024px) {
    .col-lg-4 {
        width: 33%;
    }

    .details-section.overview {
        width: 310px;
    }

    .edit-addr .modal-dialog,
    .edit-pers-details .modal-dialog,
    .edit-emer-contact .modal-dialog,
    .edit-directory-profile .modal-dialog {
        width: 896px;
    }

    .security-qa .modal-dialog {
        width: 728px;
    }

    .view-list div.item-wrapper:nth-child(3n+1),
    .emergency-contact-list div.col-xs-12:nth-child(3n+1),
    .addr-list > div:nth-child(3n+1) {
        clear: left;
    }
}

/*Tablet device*/
@media screen and (min-width: 768px) and (max-width: 1024px) {
    .view-list div.item-wrapper:nth-child(2n+1),
    .emergency-contact-list div.col-xs-12:nth-child(2n+1),
    .addr-list > div:nth-child(2n+1) {
        clear: left;
    }

    .pi-modal .modal-dialog {
        width: 97%;
    }
}

